[gd_scene load_steps=19 format=2]

[ext_resource path="res://GFX/Characters_GFX/Slime/slime1.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enemies/Slime.gd" type="Script" id=2]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime3.png" type="Texture" id=3]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime4.png" type="Texture" id=4]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime7.png" type="Texture" id=5]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime8.png" type="Texture" id=6]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime13.png" type="Texture" id=7]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime6.png" type="Texture" id=8]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime11.png" type="Texture" id=9]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime9.png" type="Texture" id=10]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime10.png" type="Texture" id=11]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime2.png" type="Texture" id=12]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime5.png" type="Texture" id=13]
[ext_resource path="res://GFX/Characters_GFX/Slime/slime12.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 12 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.03827
height = 10.3464

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.97761
height = 12.6409

[sub_resource type="CircleShape2D" id=4]
radius = 725.479

[node name="Slime" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.102639, 2.39771 )
rotation = -1.54931
shape = SubResource( 5 )

[node name="HitBox" type="Area2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2( 0.0548512, 6.09158 )
rotation = -1.56101
shape = SubResource( 3 )

[node name="POV" type="Area2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="POV"]
shape = SubResource( 4 )
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="POV" to="." method="_on_POV_body_entered"]
[connection signal="body_exited" from="POV" to="." method="_on_POV_body_exited"]
